--- a/expense-tracker/src/index.css
+++ b/expense-tracker/src/index.css
@@ -90,27 +90,27 @@ input, select {
 }
 
 /* Media Query for Larger Screens */
-@media (min-width: 768px) { /* Adjust the breakpoint if needed */
+@media (min-width: 768px) { 
   .md:flex-row {
     flex-direction: row; 
   }
 
   .lg:flex-row { 
     flex-direction: row; 
-    justify-content: space-between; /* Adjust how to distribute extra space*/
+    justify-content: space-between; 
   }
 }
 
-@media (max-width: 768px) {  /* Targets screens less than 768px wide (common phone breakpoint) */
-  .h-16 {  /* Target the top bar class */
-    height: auto;  /* Allow the height to adjust to content */
+@media (max-width: 768px) {  
+  .h-16 {  
+    height: auto;  
   }
-  .text-5xl {  /* Target the heading class */
-    font-size: 1.5rem;  /* Reduce heading size on phones */
+  .text-5xl {  
+    font-size: 1.5rem;  
       
   }
-  .p-20 {  /* Target the padding class */
-    padding: 30px;  /* Reduce padding on phones */
+  .p-20 { 
+    padding: 30px;  
   }
 }
 @media (max-width: 640px) { 
@@ -122,4 +122,10 @@ input, select {
   .text-2xl {
     font-size: 1.5xl; 
   } 
+}
+
+
+footer{
+  position: relative;
+  bottom: 0;
 }
